force-app/main/default/objects/Ticket__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <formula>Asset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssetName</label>
    <type>Text</type>
</CustomField>