force-app/main/default/objects/Ticket__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>Ticket_Logged_by_Contact__r.FirstName   &amp;  Ticket_Logged_by_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>