force-app/main/default/objects/Ticket__c/fields/Ticket_Logged_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Logged_by_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Logged by (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>